--- a/GGGC.Admin/AZ/Compr/Views/ProductoDialog.xaml
+++ b/GGGC.Admin/AZ/Compr/Views/ProductoDialog.xaml
@@ -38,20 +38,20 @@
 
     <Grid DataContext="{StaticResource ViewModel}" Background="#F7F7F7" Margin="0,0,0,0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="48*" />
+            <RowDefinition Height="16*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="33*" />
+            <RowDefinition Height="32*" />
+            <RowDefinition Height="33*" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="1">
@@ -70,18 +70,20 @@
                 <ColumnDefinition Width="146*"/>
                 <ColumnDefinition Width="68*"/>
                 <ColumnDefinition Width="29*"/>
-                <ColumnDefinition Width="213*"/>
+                <ColumnDefinition Width="148*"/>
+                <ColumnDefinition Width="64*"/>
             </Grid.ColumnDefinitions>
-            <Grid Margin="10,-21,-10,21" Grid.ColumnSpan="5">
+            <Grid Margin="10,-21,-10,21" Grid.ColumnSpan="6">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="8" />
-                    <ColumnDefinition Width="312*" />
+                    <ColumnDefinition Width="103*" />
+                    <ColumnDefinition Width="209*"/>
                     <ColumnDefinition Width="239*" />
                     <ColumnDefinition Width="60*"/>
                 </Grid.ColumnDefinitions>
-                <Label Content="Articulo" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="-8,1,246,1" Height="30" Grid.ColumnSpan="2" />
-                <TextBox FontSize="15" TabIndex="0" Name="item" BorderBrush="#C1C1C1" Grid.Column="1" Height="30" VerticalAlignment="Center" Margin="51,0,155,2" TextChanged="textFactura_TextChanged" />
-                <Label Content="Cantidad" Foreground="#666666" FontSize="17" Grid.Column="2" VerticalAlignment="Center" Margin="121,1,41,1" Height="30" />
+                <Label Content="Articulo" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="-8,-21,37,7" Height="30" Grid.ColumnSpan="2" />
+                <TextBox FontSize="15" TabIndex="0" Name="item" BorderBrush="#C1C1C1" Grid.Column="1" Height="30" VerticalAlignment="Center" Margin="51,-19,155,5" TextChanged="textFactura_TextChanged" Grid.ColumnSpan="2" />
+                <Label Content="Cantidad" Foreground="#666666" FontSize="17" Grid.Column="3" VerticalAlignment="Center" Margin="121,-20,41,6" Height="30" />
                 <telerik:RadAutoCompleteBox
                    Visibility="Hidden"
                     TextSearchMode="Contains"
@@ -92,13 +94,13 @@
                     SelectionMode="Single"
                     ItemsSource="{Binding ArticulosList}"
                     DropDownItemTemplate="{StaticResource ArticulosSearchComplete}"/>
-                <Label Content="Descripcion" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="157,1,59,1" Height="30" Grid.Column="1" />
-                <TextBox FontSize="15" TabIndex="0" x:Name="item_Copy" BorderBrush="#C1C1C1" Grid.Column="1" Height="30" VerticalAlignment="Center" Margin="251,0,118,2" TextChanged="textFactura_TextChanged" Grid.ColumnSpan="2" />
+                <Label Content="Descripcion" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="54,-21,59,-1" Height="38" Grid.Column="2" />
+                <TextBox FontSize="15" TabIndex="0" x:Name="item_Copy" IsReadOnly="True" BorderBrush="#C1C1C1" Grid.Column="2" Height="30" VerticalAlignment="Center" Margin="148,-19,118,5" TextChanged="textFactura_TextChanged" Grid.ColumnSpan="2" />
 
             </Grid>
-            <telerik:RadNumericUpDown  ValueFormat="Numeric" x:Name="Cantidad" ValueChanged="quantity_ValueChanged" Value="{Binding Cantidad, Mode=TwoWay}"  NumberDecimalDigits="0" Grid.Column="4" HorizontalAlignment="Left" Margin="118,-21,0,0" VerticalAlignment="Top" Height="32" FontSize="15" Width="80">
+            <Controls:UpDown NumberDecimalDigits="0" x:Name="Cantidad" ValueChanged="quantity_ValueChanged"    MinValue="1" Grid.Column="4" Value="{Binding Cantidad, Mode=TwoWay}" HorizontalAlignment="Left" Margin="118,-41,0,0" VerticalAlignment="Top" Height="32" FontSize="15" Width="80" Grid.ColumnSpan="2">
 
-            </telerik:RadNumericUpDown>
+            </Controls:UpDown>
 
         </Grid>
 
@@ -108,20 +110,26 @@
                 <ColumnDefinition Width="273*"/>
             </Grid.ColumnDefinitions>
 
-            <DataGrid AutoGenerateColumns="True" SelectionChanged="radGridView1_SelectionChanged" 
+            <!--<DataGrid AutoGenerateColumns="True" SelectionChanged="radGridView1_SelectionChanged" 
                       IsReadOnly="True"
                   Name="dataGrid1" 
                   VerticalAlignment="Top" Height="166" Margin="0,27,0,-87" Grid.ColumnSpan="2">
 
-            </DataGrid>
-            <Label Content="IVA" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="212,-16,53,92" Height="30" />
-            <Label Content="Total" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="41,-16,151,92" Height="30" Grid.Column="1" />
+            </DataGrid>-->
+            <telerik:RadGridView  AutoGenerateColumns="True"
+                    IsFilteringAllowed="True" IsReadOnly="True"  Name="dataGrid1" MouseDoubleClick="rdvMouseDoubleClick" 
+                  VerticalAlignment="Top" Height="166" Margin="0,27,0,-87" Grid.ColumnSpan="2">
+
+            </telerik:RadGridView>
+            <Label Content="IVA" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="297,-16,241,92" Height="30" Grid.ColumnSpan="2" />
+            <Label Content="Total" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="121,-16,71,92" Height="30" Grid.Column="1" />
         </Grid>
         <Grid Grid.Row="7" Margin="0,6,0,26" Grid.RowSpan="3">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="20" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="385*" />
+                    <ColumnDefinition Width="214*"/>
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
@@ -160,13 +168,12 @@
 
             </Grid>
         </Grid>
-        <Label Content="Precio" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="20,0,518,2" Height="30" Grid.Row="4" />
-        <Controls:DoubleTextBox FontSize="15" IsReadOnly="True" TextAlignment="Right" BorderBrush="#C1C1C1" Name="rate" Height="30" Margin="89,2,420,0" Grid.Row="4">
-
-        </Controls:DoubleTextBox>
-        <local:AddCompra HorizontalAlignment="Left" Height="100" Margin="222,10,0,0" Grid.RowSpan="4" VerticalAlignment="Top" Width="100"/>
-        <Controls:DoubleTextBox FontSize="15" IsReadOnly="True" TextAlignment="Right" NumberDecimalDigits="0"  BorderBrush="#C1C1C1" x:Name="rate_Iva" Height="30" Margin="258,2,251,0" Grid.Row="4"/>
-        <Label FontSize="15" TabIndex="0" x:Name="Total"  BorderBrush="#C1C1C1" Height="28" VerticalAlignment="Center" Margin="471,2,55,2"  Grid.Row="4" />
+        <Label Content="Nivel" Foreground="#666666" FontSize="17" VerticalAlignment="Center" Margin="8,0,530,2" Height="30" Grid.Row="4" />
+        <Controls:DoubleTextBox FontSize="15" IsReadOnly="True" TextAlignment="Right" BorderBrush="#C1C1C1" Name="rate" Height="30" Margin="349,2,160,0" Grid.Row="4"/>
+        <local:AddCompra HorizontalAlignment="Left" Height="100" Margin="222,10,0,0" Grid.RowSpan="3" VerticalAlignment="Top" Width="100"/>
+        <Label FontSize="15" TabIndex="0" x:Name="Total"  BorderBrush="#C1C1C1" Height="28" VerticalAlignment="Center" Margin="514,2,12,2"  Grid.Row="4" />
+        <telerik:RadComboBox x:Name="radComboNivel" FontSize="16" SelectionChanged="nivel_SelectioChanged" HorizontalAlignment="Left" DisplayMemberPath="Nivel_De_Precios" Height="25" Margin="63,5,0,0" Grid.Row="4" VerticalAlignment="Top" Width="95"/>
+        <TextBox x:Name="precioCodigo" HorizontalAlignment="Left" IsReadOnly="True" Height="25" Margin="172,5,0,0" Grid.Row="4" TextWrapping="Wrap"  VerticalAlignment="Top" Width="107"/>
 
     </Grid>
 </Window>
