--- a/GGGC.Admin/AZ/Compr/Views/AddCompra2.xaml
+++ b/GGGC.Admin/AZ/Compr/Views/AddCompra2.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="GGGC.Admin.AZ.Compr.Views.AddCompra2"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GGGC.Admin.AZ.Compr.Views"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" x:Class="GGGC.Admin.AZ.Compr.Views.AddCompra2"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="806.667">
     <Grid x:Name="RootGrid">
@@ -12,7 +13,7 @@
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
 
-        <Grid Row="0">
+        <Grid Grid.Row="0">
             <Grid x:Name="root">
                 <Grid x:Name="MainGrid">
 
@@ -48,7 +49,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock  Text = "Folio Factura" VerticalAlignment="Center" HorizontalAlignment="Left"  FontSize="15" Foreground="#404435" Padding="5,0,0,0" />
-                                    <TextBlock Grid.Column="1" x:Name = "FECHA" Text="II666" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="#808285" Padding="0,0,0,0"/>
+                                    <TextBlock Grid.Column="1" x:Name = "FECHA" Text="II356" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Left"  Foreground="#808285" Padding="0,0,0,0"/>
 
                                 </Grid>
                                 <Grid x:Name="dersup" Grid.Column="1" Grid.Row="0">
@@ -87,6 +88,8 @@
                                             </Grid.RowDefinitions>
                                             <TextBlock  Text = "Folio de la Factura "  FontSize="15" Foreground="#404435" Padding="5,0,0,0" />
                                             <TextBlock  Text = "" x:Name = "DueDates" Grid.Column="1" FontSize="15" Foreground="#404435" Padding="0,0,0,0" />
+                                            <!--<telerik:RadDatePicker HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" VerticalAlignment="Top" IsEnabled="True" Height="24" Width="127"/>-->
+
                                             <TextBlock Text="" x:Name = "InvoiceNumbers" Grid.Column="1" Grid.Row="1" FontSize="16" Foreground="#808285" Padding="5,0,0,0"/>
                                             <TextBlock Text="" x:Name = "Provs" Grid.Column="1" Grid.Row="2" FontSize="16" Foreground="#808285" Padding="5,0,0,0"/>
                                             <TextBlock  Text = "" Grid.Row="3" Grid.Column="1" FontSize="15" Foreground="#404435" Padding="0,0,0,0"/>
@@ -101,6 +104,7 @@
                                     <!--<Image Grid.Row="1" x:Name="CompanyLogo" VerticalAlignment="Center"  Grid.Column="0"  Source="Assets/syncfusion_logo.gif" />-->
                                     <Rectangle Grid.Column="0" StrokeThickness="1" StrokeDashArray="4,4" Stroke="#FFCECECE" Margin="0,-32,0,-126"/>
                                     <Rectangle Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="5" StrokeThickness="1" StrokeDashArray="4,4" Stroke="#FFCECECE" Margin="0,0,0,-126"/>
+                                    <telerik:RadDatePicker HorizontalAlignment="Left" x:Name="pickerFactura" Margin="172,46,-19,0" VerticalAlignment="Top"   Width="116"/>
 
 
                                 </Grid>
@@ -136,9 +140,10 @@
                                             </Grid.RowDefinitions>
                                             <TextBlock  Text = "Fecha recepción de mercancias "  FontSize="15" Foreground="#404435" Padding="5,0,0,0" />
                                             <TextBlock  Text = "Fecha" x:Name = "DueDate" Grid.Column="1" FontSize="15" Foreground="#808285" Padding="0,0,0,0" />
-                                            <TextBlock Text="Osillo" x:Name = "InvoiceNumber" Grid.Column="1" Grid.Row="1" FontSize="16" Foreground="#808285" Padding="0,0,0,0"/>
-                                            <TextBlock Text="Osillo" x:Name = "Prov" Grid.Column="1" Grid.Row="2" FontSize="15" Foreground="#808285" Padding="0,0,0,0"/>
+                                            <TextBlock Text="" x:Name = "InvoiceNumber" Grid.Column="1"  Grid.Row="1" FontSize="16" Foreground="#808285" Padding="0,0,0,0"/>
+                                            <TextBlock Text="" x:Name = "Prov" Grid.Column="1" Grid.Row="2" FontSize="15" Foreground="#808285" Padding="0,0,0,0"/>
                                             <TextBlock  Text = "IVA Aplic. al documento " Grid.Row="3" Grid.Column="1" FontSize="15" Foreground="#404435" Padding="0,0,0,0"/>
+                                            <telerik:RadDatePicker HorizontalAlignment="Left" x:Name="pickermercancia" Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" Width="125"/>
 
                                             <TextBlock  Text = "Descuento aplicado a la factura  " Grid.Row="1" FontSize="15" Foreground="#404435" Padding="5,0,0,0" />
                                             <TextBlock  Text = "Numero de Proveedor  " Grid.Row="2" FontSize="15" Foreground="#404435" Padding="5,0,0,0"/>
@@ -157,7 +162,9 @@
                                 </Grid>
                             </Grid>
 
-                            <Grid Grid.Row="1" Name="InvoiceGridHeader" Background="#B3D1E8" Grid.RowSpan="2">
+                            
+                            <!--Grid parael header de la tabla-->
+                            <Grid Grid.Row="1" x:Name="InvoiceGridHeader" Background="#B3D1E8" Grid.RowSpan="2">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="37" />
 
@@ -167,7 +174,7 @@
                                     <ColumnDefinition Width="75*"   />
                                     <ColumnDefinition Width="205*"/>
                                     <ColumnDefinition Width="50*"/>
-                                    <ColumnDefinition Width="59*"/>
+                                    <ColumnDefinition Width="59"/>
                                     <ColumnDefinition Width="97*"/>
                                     <ColumnDefinition Width="66*"/>
                                     <ColumnDefinition Width="76*"/>
@@ -179,7 +186,7 @@
                                 <TextBlock Grid.Row="0" Grid.Column="1" x:Name="Descripcion" Text="Descripcion"  TextAlignment="Left"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="2,10,53,10" />
                                 <TextBlock Grid.Row="0" Grid.Column="2" x:Name="UM" Text="U/M"  TextAlignment="Center" VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="0,10" />
                                 <TextBlock Grid.Row="0" Grid.Column="3" x:Name="Cantidad" Text="Cantidad"  TextAlignment="Right"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="0,10,1,10" />
-                                <TextBlock Grid.Row="0" Grid.Column="4" x:Name="PC" Text="P. Unit Sin Desc."  TextAlignment="Right"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="5,10" />
+                                <TextBlock Grid.Row="0" Grid.Column="4" x:Name="PC" Text="P. Unit Sin Desc."  TextAlignment="Right"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="5,10,0,10" />
                                 <TextBlock Grid.Row="0" Grid.Column="5" x:Name="desc" Text="%Desc."  TextAlignment="Center"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="14,10,6,10" />
                                 <TextBlock Grid.Row="0" Grid.Column="6" x:Name="desct" Text="%Desc.Total"  TextAlignment="Right"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="0,10" />
                                 <TextBlock Grid.Row="0" Grid.Column="7" x:Name="pdesc" Text="P.Unit.C.Desc."  TextAlignment="Right"  VerticalAlignment="Center"  FontWeight="Normal" FontFamily="Segoe UI" Foreground="#3F3F3F" FontSize="14" Height="18" Margin="5,10" />
@@ -201,9 +208,9 @@
                                     </Grid>
                                 </StackPanel>-->
                             </Grid>
-
+                            <!--Tabla que contiene datos-->
                             <ScrollViewer x:Name="GridScrollViewer" Grid.Row="3" Height="{Binding InvoiceGrid.ActualHeight}" VerticalScrollBarVisibility="Auto" BorderBrush="AliceBlue">
-                                <Grid Name="InvoiceGrid"   MouseLeftButtonDown="InvoiceGrid_MouseLeftButtonDown">
+                                <Grid x:Name="InvoiceGrid"   MouseLeftButtonDown="InvoiceGrid_MouseLeftButtonDown">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="30" />
                                         <RowDefinition Height="30"/>
@@ -225,16 +232,16 @@
                                         <ColumnDefinition Width="71*"/>
 
                                     </Grid.ColumnDefinitions>
-                                    <Rectangle Grid.Row="0" Height="1"  StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"></Rectangle>
-                                    <Rectangle Grid.Row="1" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"></Rectangle>
-                                    <Rectangle Grid.Row="2" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"></Rectangle>
-                                    <Rectangle Grid.Row="3" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"></Rectangle>
-                                    <Rectangle Grid.Row="4" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"></Rectangle>
-                                    <Rectangle Grid.Row="5" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"></Rectangle>
+                                    <Rectangle Grid.Row="0" Height="1"  StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"/>
+                                    <Rectangle Grid.Row="1" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"/>
+                                    <Rectangle Grid.Row="2" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"/>
+                                    <Rectangle Grid.Row="3" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"/>
+                                    <Rectangle Grid.Row="4" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"/>
+                                    <Rectangle Grid.Row="5" Height="1" StrokeThickness="0.75" VerticalAlignment="Bottom" Grid.ColumnSpan="9"  StrokeDashArray="4,4" Stroke="#FFCECECE"/>
 
                                 </Grid>
                             </ScrollViewer>
-
+                            <!--Grid para la suma de cantidad y precios-->
                             <Grid x:Name="Events" Grid.Row="5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="157*"/>
@@ -283,13 +290,16 @@
                                         <RowDefinition/>
                                         <RowDefinition/>
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Text="00.00" FontSize="16"  Foreground="#404435"   VerticalAlignment="Center" Padding="0,0,5,0" HorizontalAlignment="Right"/>
+                                    <TextBlock Grid.Row="0" x:Name="TotalCantidad" Text="0" FontSize="16"  Foreground="#404435"   VerticalAlignment="Center" Padding="0,0,5,0" HorizontalAlignment="Right"/>
                                     <TextBlock Grid.Row="1" Text="00.00" FontSize="16"  Foreground="#404435"  VerticalAlignment="Center" Padding="0,0,5,0"  HorizontalAlignment="Right"/>
                                     <TextBlock Grid.Row="2"  x:Name="TotalAmount"  Foreground="#404435" Text="00.00" FontSize="16"  Padding="0,0,5,0"  VerticalAlignment="Center"  HorizontalAlignment="Right"/>
 
                                     <!--<TextBlock Grid.Row="1" Padding="0,0,10,20" VerticalAlignment="Center" HorizontalAlignment="Right" Text="Cantidad Total de Articulos" Foreground="#404435" FontSize="18" Margin="-91,0,190,0"/>
+                                    
                                     <TextBlock Grid.Row="1" Padding="0,0,10,20" VerticalAlignment="Center" HorizontalAlignment="Right" Text="Precio Extendido total (sin descuento)" Foreground="#404435" FontSize="18" Margin="-196,43,201,40" Grid.RowSpan="3" Width="317"/>
+                                    
                                     <TextBlock Grid.Row="2" Padding="0,0,10,20" VerticalAlignment="Center" HorizontalAlignment="Right" Text="Precio Extendido total (con descuento)" Foreground="#404435" FontSize="18" Margin="-184,41,190,-2" Grid.RowSpan="2"/>
+                                   
                                     <TextBlock  x:Name="TotalAmount" Grid.Row="3"  Padding="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Right"  Foreground="#404435" FontSize="18" Margin="0,3,21,14" Width="164"/>-->
 
                                     <!--<TextBlock Grid.Row="1" Padding="0,0,0,20" Grid.Column="1" x:Name="TotalAmount" TextWrapping="Wrap" HorizontalAlignment="Stretch" TextAlignment="Center" Foreground="#404435" FontSize="42" VerticalAlignment="Center"/>-->
@@ -301,6 +311,8 @@
 
                             </Grid>
 
+                            
+                            
                         </Grid>
 
                     </Grid>
@@ -324,7 +336,7 @@
             </Grid>
         </Grid>
 
-        <Grid Row="1">
+        <Grid Grid.Row="1">
             <Grid Background="White"  Height="Auto" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="168*"/>
@@ -342,7 +354,7 @@
                 <!--<Button Grid.Column="6" Style="{StaticResource ExportButtonStyle}" x:Name="PDFExport" Tag="Export To PDF" Content="Export To PDF" FontSize="15" Click="PDFExport_Click"  Margin="0,20,5,20" />-->
                 <!--<Button Grid.Column="7" Style="{StaticResource ExportButtonStyle}" x:Name="WordExport"  Tag="Export To Word" Content="Export To Word" FontSize="15"  Click="WordExport_Click"  Margin="0,20,5,20"/>-->
                 <Button Grid.Column="0" Style="{StaticResource ExportButtonStyle}" FontWeight="Normal"  Width="110" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top"  x:Name="AddButton" Click="Add"  Content="Agregar"  FontSize="16" Margin="10,0,0,0" />
-                <Button Grid.Column="8" Style="{StaticResource ExportButtonStyle}" FontWeight="Normal"  Width="110" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top"  x:Name="Save" Click="Add" Content="Guardaree"  FontSize="16" Margin="10,0,0,0" />
+                <Button Grid.Column="8" Style="{StaticResource ExportButtonStyle}" FontWeight="Normal"  Width="110" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top"  x:Name="Save" Click="Add" Content="Guardar"  FontSize="16" Margin="10,0,0,0" />
 
                 <Button Grid.Column="1" Style="{StaticResource DeleteItemButton}"  Click="Delete"  FontWeight="Normal" IsEnabled="False"  Width="120" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top"  x:Name="DeleteButton" Content="Eliminar"  FontSize="16" />
             </Grid>
