--- a/GGGC.Admin/AZ/Compr/Views/ProductoDialog.xaml
+++ b/GGGC.Admin/AZ/Compr/Views/ProductoDialog.xaml
@@ -1,4 +1,5 @@
-﻿<Window xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"   x:Class="GGGC.Admin.AZ.Compr.Views.ProductoDialog"
+﻿<Window xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"  
+        x:Class="GGGC.Admin.AZ.Compr.Views.ProductoDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
      
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -111,7 +112,7 @@
             </Grid.ColumnDefinitions>
 
             <!--<DataGrid AutoGenerateColumns="True" SelectionChanged="radGridView1_SelectionChanged" 
-                      IsReadOnly="True"
+                      IsReadOnly="True"                     
                   Name="dataGrid1" 
                   VerticalAlignment="Top" Height="166" Margin="0,27,0,-87" Grid.ColumnSpan="2">
 
