--- a/GGGC.Admin/AZ/Ordenes/Views/OrdenView.xaml
+++ b/GGGC.Admin/AZ/Ordenes/Views/OrdenView.xaml
@@ -2,11 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"  
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:tabData="clr-namespace:GGGC.Admin.AZ.Ordenes.Views"
              xmlns:local="clr-namespace:GGGC.Admin.AZ.Ordenes.Views"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="806.667" KeyDown="Window_KeyDown">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- note you only need bring in these extra resource dictionaries when using non-default styles, so only bring them into your controls where the default style is not what you want -->
+                <ResourceDictionary Source="/GGGC.Admin;component/AZ/Ordenes/Themes/MaterialDesignTheme.Slider.xaml" />
+                <ResourceDictionary Source="/GGGC.Admin;component/AZ/Ordenes/Themes/MaterialDesignColor.DeepPurple.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid x:Name="RootGrid" >
         <Grid.RowDefinitions>
 
@@ -19,19 +31,235 @@
         <TabControl Grid.Row="0" Margin="0,0,0,0" >
 
 
-            <TabItem Header="Orden de Patio" >
-                <local:Cliente Margin="0,0,0,0"/>
+            <TabItem Header="Datos Generales" >
+
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="11*" />
+                        <RowDefinition Height="19*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Background="White" Grid.RowSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="182*"/>
+                            <ColumnDefinition Width="625*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="52*"/>
+                                <RowDefinition Height="102*"/>
+                                <RowDefinition Height="242*"/>
+                                <RowDefinition Height="83*"/>
+                                <RowDefinition Height="85*"/>
+                                <RowDefinition Height="36*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="38*"/>
+                                <ColumnDefinition Width="53*"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="FOLIO" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="26" Margin="10,0,20,0" Width="46"/>
+                            <Label Content="# CLIENTE" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+                            <Label Content="RFC" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <TextBox x:Name="Folioo" BorderBrush="#C1C1C1" TextChanged="Folioo_TextChanged" Grid.Column="1" Grid.Row="1" Margin="5,5,5,0"/>
+                            <TextBox BorderBrush="#C1C1C1" Grid.Column="1" Grid.Row="3"  Margin="5,5,5,0"/>
+                            <TextBox BorderBrush="#C1C1C1" Grid.Column="1" Grid.Row="4" Margin="5,5,5,0"/>
+                        </Grid>
+                        <Grid Grid.Column="1" >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="61*" />
+                                <RowDefinition Height="39*"/>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="150*"/>
+                                    <ColumnDefinition Width="54*"/>
+                                    <ColumnDefinition Width="168*"/>
+                                    <ColumnDefinition Width="60*"/>
+                                    <ColumnDefinition Width="193*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="23*"/>
+                                    <RowDefinition Height="45*"/>
+                                    <RowDefinition Height="45*"/>
+                                    <RowDefinition Height="48*"/>
+                                    <RowDefinition Height="22*"/>
+                                </Grid.RowDefinitions>
+                                <telerik:RadDateTimePicker  Grid.Row="1" Margin="5,5,5,-2"/>
+                                <telerik:RadDateTimePicker  Grid.Row="2" Margin="5,5,5,-2"/>
+                                <telerik:RadDateTimePicker  Grid.Row="3" Margin="5,5,5,-2"/>
+                                <ComboBox x:Name="Marca"  IsEditable="True" IsReadOnly="True" Text="Marca"  Grid.Row="1" Grid.Column="2" Margin="5,5,5,-2"/>
+                                <ComboBox x:Name="Modelo"  IsEditable="True" IsReadOnly="True" Text="Modelo" Grid.Row="2" Grid.Column="2" Margin="5,5,5,-2"/>
+                                <ComboBox x:Name="Ano"  IsEditable="True" IsReadOnly="True" Text="Año" Grid.Row="3" Grid.Column="2" Margin="5,5,5,-2"/>
+                                <ComboBox x:Name="Placas"  IsEditable="True" IsReadOnly="True" Text="Placas" Grid.Row="1" Grid.Column="4" Margin="5,5,5,-2"/>
+                                <ComboBox x:Name="Kilometraje"  IsEditable="True" IsReadOnly="True" Text="Kilometraje" Grid.Row="2" Grid.Column="4" Margin="5,5,5,-2"/>
+                            </Grid>
+                            <Grid Grid.Row="1" >
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <telerik:RadWatermarkTextBox Margin="5,5,5,5"  WatermarkContent="Observaciones Internas"/>
+                                <telerik:RadWatermarkTextBox Grid.Row="1" Margin="5,5,5,5"  WatermarkContent="Observaciones Cliente"/>
+                            </Grid>
+
+                        </Grid>
+
+                    </Grid>
+                </Grid>
+
+            </TabItem>
+
+            <TabItem Header="Accesorios" >
+
+                <Grid Background="White" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="11*" />
+                        <RowDefinition Height="19*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0"  Grid.RowSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="ACCESORIOS" VerticalContentAlignment="Bottom"  FontWeight="Bold" Grid.Column="0" Grid.Row="0" Margin="5,5,5,5"/>
+                            <Label x:Name="lblGas" Content="GASOLINA"   VerticalContentAlignment="Bottom" HorizontalContentAlignment="Right"  FontWeight="Bold" Grid.Column="1" Grid.Row="0" />
+                            <CheckBox x:Name="chkgato" Grid.Column="0" Grid.Row="1"  Margin="5,5,5,5" Content="GATO"/>
+                            <CheckBox x:Name="chkmaneral" Grid.Column="0" Grid.Row="2"  Margin="5,5,5,5" Content="MANERAL DEL GATO"/>
+                            <CheckBox x:Name="chkllave" Grid.Column="0" Grid.Row="3"  Margin="5,5,5,5" Content="LLAVE DE RUEDA"/>
+                            <CheckBox x:Name="chktaponaceite" Grid.Column="1" Grid.Row="1"  Margin="5,5,5,5" Content="TAPON DE ACEITE"/>
+                            <CheckBox x:Name="chktaponradiador"  Grid.Column="1" Grid.Row="2"  Margin="5,5,5,5" Content="TAPON DE RADIADOR"/>
+                            <CheckBox x:Name="chkvarilla" Grid.Column="1" Grid.Row="3"  Margin="5,5,5,5" Content="VARILLA DE ACEITE"/>
+                        </Grid>
+
+
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <CheckBox x:Name="chkestuche" Grid.Column="0" Grid.Row="1"  Margin="5,5,5,5" Content="ESTUCHE DE HERRAMIENTAS" />
+                            <CheckBox x:Name="chktriangulo" Grid.Column="0" Grid.Row="2"  Margin="5,5,5,5" Content="TRIANGULO DE SEGURIDAD"/>
+                            <CheckBox x:Name="chkllrefa" Grid.Column="0" Grid.Row="3"  Margin="5,5,5,5" Content="LLANTA DE REFACCIÓN"/>
+                            <CheckBox x:Name="chkfiltroaire" Grid.Column="1" Grid.Row="1"  Margin="5,5,5,5" Content="FILTRO DE AIRE"/>
+                            <CheckBox x:Name="chkllbateri" Grid.Column="1" Grid.Row="2"  Margin="5,5,5,5" Content="BATERIA (MCA)"/>
+                            <CheckBox x:Name="chkextinguidor" Grid.Column="1" Grid.Row="3"  Margin="5,5,5,5" Content="EXTINGUIDOR"/>
+                            <Slider Grid.Column="0" Grid.Row="0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"
+                        VerticalContentAlignment="Center"  TickPlacement="Both"  Margin="0,-10,0,-35"
+                        Minimum="0" Maximum="10" Ticks="0, 2.5,5, 7.5,10" IsSnapToTickEnabled="True" 
+                        Style="{StaticResource MaterialDesignDiscreteSlider}" ToolTip="MaterialDesignDiscreteSlider" 
+                        Height="94" Width="400"  >
+
+                            </Slider>
+                        </Grid>
+
+
+
+                    </Grid>
+                </Grid>
+
+            </TabItem>
+
+            <TabItem Header="Datos Generales" >
+                <Grid Background="White">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="163*" />
+                        <RowDefinition Height="437*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0"  Grid.RowSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Column="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="EXTERIORES" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="5,5,5,0"/>
+                            <CheckBox x:Name="chkluces" Grid.Column="0" Grid.Row="1"  Margin="5,5,5,5" Content="UNIDAD DE LUCES"/>
+                            <CheckBox x:Name="chkantena"   Grid.Column="0" Grid.Row="2"  Margin="5,5,5,5" Content="ANTENA"/>
+                            <CheckBox x:Name="chkespejo" Grid.Column="0" Grid.Row="3"  Margin="5,5,5,5" Content="ESPEJO LATERAL"/>
+                            <CheckBox x:Name="chkcristales" Grid.Column="0" Grid.Row="4"  Margin="5,5,5,5" Content="CRISTALES"/>
+                            <CheckBox x:Name="chktapas" Grid.Column="0" Grid.Row="5"  Margin="5,5,5,5" Content="TAPAS"/>
+                            <CheckBox x:Name="chkmoldeduras" Grid.Column="1" Grid.Row="1"  Margin="5,5,5,5" Content="MOLDEDURAS"/>
+                            <CheckBox x:Name="chkcompletas" Grid.Column="1" Grid.Row="2"  Margin="5,5,5,5" Content="COMPLETAS"/>
+                            <CheckBox x:Name="chktapon" Grid.Column="1" Grid.Row="3"  Margin="5,5,5,5" Content="TAPON DE GASOLINA"/>
+                            <CheckBox x:Name="chkcarroseria" Grid.Column="1" Grid.Row="4"  Margin="5,5,5,5" Content="CARROSERIA SIN GOLPES"/>
+                            <CheckBox x:Name="chkparabrisa" Grid.Column="1" Grid.Row="5"  Margin="5,5,5,5" Content="LIMPIA PARABRISAS"/>
+
+                        </Grid>
+
+
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Label Content="INTERIORES" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="5,5,5,0"/>
+
+                            <CheckBox x:Name="chktablero" Grid.Column="0" Grid.Row="1"  Margin="5,5,5,5" Content="INSTRUMENTOS DE TABLERO"/>
+                            <CheckBox x:Name="chkesterio" Grid.Column="0" Grid.Row="2"  Margin="5,5,5,5" Content="ESTEREO"/>
+                            <CheckBox x:Name="chkbocinas" Grid.Column="0" Grid.Row="3"  Margin="5,5,5,5" Content="BOCINAS"/>
+                            <CheckBox x:Name="chkencendedor" Grid.Column="0" Grid.Row="4"  Margin="5,5,5,5" Content="ENCENDEDOR"/>
+                            <CheckBox x:Name="chkespejoretro" Grid.Column="0" Grid.Row="5"  Margin="5,5,5,5" Content="ESPEJO RETROVISOR"/>
+                            <CheckBox x:Name="chkcinturon" Grid.Column="1" Grid.Row="1"  Margin="5,5,5,5" Content="CINTURONES"/>
+                            <CheckBox x:Name="chkmanijas" Grid.Column="1" Grid.Row="2"  Margin="5,5,5,5" Content="MANIJAS DE INTERIORES"/>
+                            <CheckBox x:Name="chktapetes" Grid.Column="1" Grid.Row="3"  Margin="5,5,5,5" Content="TAPETES"/>
+                            <CheckBox x:Name="chkvestidura" Grid.Column="1" Grid.Row="4"  Margin="5,5,5,5" Content="VESTIDURAS"/>
+
+                        </Grid>
+
+
+
+                    </Grid>
+                </Grid>
+
             </TabItem>
 
 
-            <TabItem Header="Accesorios" >
+            <!--<TabItem x:Name="tabPendientes" Header="Accesorios" >
                 <local:Pendientes/>
             </TabItem>
 
 
             <TabItem Header="Inventario Vehículo" >
                 <local:Inventariovehiculo/>
-            </TabItem>
+            </TabItem>-->
         </TabControl>
         <Grid Grid.Row="1" Background="White" x:Name="contentgrid" >
 
@@ -54,8 +282,8 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="Codigo" TextAlignment="Left"  VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="26" Margin="4,12,10,8" />
                 <TextBlock Grid.Column="1" Text="Descripción" TextAlignment="Left"  VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="26" Margin="0,12,0,8"/>
-                <TextBlock Grid.Column="2" Text="Cantidad" TextAlignment="Center"  VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="30" Margin="0,12,0,4"/>
-                <TextBlock Grid.Column="3" Text="Precio de Lista" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="30" Margin="2,12,0,4"/>
+                <TextBlock Grid.Column="2" Text="Cantidad" TextAlignment="Center" HorizontalAlignment="Stretch"  VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="30" Margin="0,12,0,4"/>
+                <TextBlock Grid.Column="3" Text="Precio de Lista" TextAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="30" Margin="2,12,0,4"/>
                 <TextBlock Grid.Column="4" Text="Nivel" TextAlignment="Center"  VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="30" Margin="2,12,11,4"/>
                 <TextBlock Grid.Column="5" Text="Precio de Venta" TextAlignment="Center"  VerticalAlignment="Center"  FontFamily="Segoe UI" Foreground="#3F3F3F"  FontSize="14" Height="32" Margin="6,12,5,2" RenderTransformOrigin="0.5,0.5">
                     <TextBlock.RenderTransform>
